[박솔찬] 회원가입 요구사항 변경에 따른 기능 수정 (#106)
* feat: HttpBodyParser 테스트 작성
HttpBodyParser 테스트 케이스 작성

* feat: HttpBodyParser parse 구현
parse 메서드 기능 구현

* feat: form.html 수정
기존 회원가입 요청의 HTTP Method를 'GET'에서 'POST'로 변경

* feat: HttpRequestParser 수정
HttpRequest의 data(body) 필드와 HttpRequestParser 부분 파싱 로직 추가 및 테스트 케이스 작성

* feat: SignUpController 수정
요구사항 변경에 따른 회원가입 처리 Method GET -> POST

* feat: SignUpController 수정
회원가입 데이터가 기존 quries에서 가져오던 방식을 data에서 가져오도록 수정 반영

* feat: SignUpController 테스트 수정
회원가입 기능 요구 사항 변경에 따른 테스트 케이스 수정 반영

* feat: HttpBody 객체 제거
HttpBody가 다양한 타입으로 사용될 여지가 있음.
따라서 현재 text/html과 application/x-www-form-urlencoded 모두 지원하기 위해 많은 수정 작업이 필요
우선 HttpBody 객체를 제거하여 기능 요구사항을 충족할 수 있도록 수정

* feat: HttpRequestParser 수정
기존 바디 파싱 가능 여부를 확인하는 로직을 하나의 메서드로 분리

* feat: HttpBodyParser 명 변경
HttpBodyParser 네이밍은 너무 많은 바디 타입의 의미를 가지고 있다. 하지만 실제 수행은 application/x-form-urlencoded 타입이기 때문에 이에 맞는 명으로 변경

* feat: URI 객체 명 변경
URI보다는 URL이 좀 더 알맞다고 판단하여 명 수정

* feat: URI 객체 명 변경
URI보다는 URL이 좀 더 알맞다고 판단하여 명 수정

* feat: HttpRequestReader 작성
HttpRequestReader를 구현하여 기존 HttpRequestParser가 진행하던 read 책임을 위임

* feat: HttpHeaders 메서드 추가 및 HttpRequestParser 수정
HttpHeaders contentLength메서드 추가하여 기존 HttpRequestParser에서 직접 헤더 속성 체크하는 부분 위임.
HttpRequestParser에 기존 HttpRequest read하는 부분 HttpRequestReader를 통해 진행다도록 수정

* feat: HttpRequest 메서드 명 수정
기존 URI -> URL 변경하면서 변경하지 못한 메서드 명 수정

* feat: Controller 수정
doGet 및 doPost 메서드를 모두 default 메서드로 수정하여 기본 호출 시 MethodNotAllowException 예외를 던지도록 수정