@@ -30,7 +30,7 @@ public class StaticResourceControllerTest {
         StaticResourceController controller = new StaticResourceController();
         HttpRequest request = new HttpRequest(
                 HttpMethod.GET,
-                new URI("/index.html", Map.of()),
+                new URL("/index.html", Map.of()),
                 new HttpHeaders()
         );
         HttpResponse response = new HttpResponse(mockDos);
@@ -39,12 +39,11 @@ public class StaticResourceControllerTest {
         controller.execute(request, response);
 
         // then
-        HttpBody body = response.getBody();
         HttpHeaders headers = response.getHeaders();
         assertAll(
                 () -> assertEquals(HttpStatus.OK, response.getStatus()),
                 () -> assertEquals(MediaType.TEXT_HTML.getType(), headers.getValue("Content-Type")),
-                () -> assertEquals(6902, body.size())
+                () -> assertEquals(6902, response.getBody().length)
         );
     }
 
@@ -55,7 +54,7 @@ public class StaticResourceControllerTest {
         StaticResourceController controller = new StaticResourceController();
         HttpRequest request = new HttpRequest(
                 HttpMethod.POST,
-                new URI("/index.html", Map.of()),
+                new URL("/index.html", Map.of()),
                 new HttpHeaders()
         );
         HttpResponse response = new HttpResponse(mockDos);
